--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family: Poppins;
+  src: url(/Poppins-Regular.ttf);
+}
+
 *{
-  font-family: 'Gabarito';
+  font-family: 'Poppins', sans-serif;
 }
